RESOLVED FIXED160489
[SOUP] Deduplicate WebProcessPool::setIgnoreTLSErrors
https://bugs.webkit.org/show_bug.cgi?id=160489
Summary [SOUP] Deduplicate WebProcessPool::setIgnoreTLSErrors
Michael Catanzaro
Reported 2016-08-02 21:12:51 PDT
WebProcessPool::setIgnoreTLSErrors has identical implementation in WebProcessPoolEfl.cpp and WebProcessPoolGtk.cpp. We have WebProcessPoolSoup.cpp and this function is specific to the soup network backend, so move it there.
Attachments
Patch (3.35 KB, patch)
2016-08-02 21:17 PDT, Michael Catanzaro
no flags
Patch (4.06 KB, patch)
2016-08-03 11:04 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2016-08-02 21:17:48 PDT
Michael Catanzaro
Comment 2 2016-08-03 11:04:49 PDT
WebKit Commit Bot
Comment 3 2016-08-03 13:07:43 PDT
Comment on attachment 285250 [details] Patch Clearing flags on attachment: 285250 Committed r204097: <http://trac.webkit.org/changeset/204097>
WebKit Commit Bot
Comment 4 2016-08-03 13:07:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.