[SOUP] Deduplicate WebProcessPool::setIgnoreTLSErrors https://bugs.webkit.org/show_bug.cgi?id=160489

Reviewed by Alex Christensen.

WebProcessPool::setIgnoreTLSErrors has identical implementation in WebProcessPoolEfl.cpp
and WebProcessPoolGtk.cpp. We have WebProcessPoolSoup.cpp and this function is specific to
the soup network backend, so move it there.

* UIProcess/efl/WebProcessPoolEfl.cpp:
(WebKit::WebProcessPool::setIgnoreTLSErrors): Deleted.
* UIProcess/gtk/WebProcessPoolGtk.cpp:
(WebKit::WebProcessPool::setIgnoreTLSErrors): Deleted.
* UIProcess/soup/WebProcessPoolSoup.cpp:
(WebKit::WebProcessPool::setIgnoreTLSErrors):


Canonical link: https://commits.webkit.org/178648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204097 268f45cc-cd09-0410-ab3c-d52691b4dbfc