Source/WebKit2/UIProcess/soup/WebProcessPoolSoup.cpp
@@ -27,6 +27,7 @@
 #include "WebProcessPool.h"
 
 #include "NetworkProcessCreationParameters.h"
+#include "NetworkProcessMessages.h"
 #include "WebCookieManagerProxy.h"
 #include "WebSoupCustomProtocolRequestManager.h"
 #include <WebCore/Language.h>
@@ -43,6 +44,13 @@ void WebProcessPool::platformInitializeNetworkProcess(NetworkProcessCreationPara
 #if ENABLE(NETWORK_CACHE)
     parameters.shouldEnableNetworkCacheEfficacyLogging = false;
 #endif
+}
+
+void WebProcessPool::setIgnoreTLSErrors(bool ignoreTLSErrors)
+{
+    m_ignoreTLSErrors = ignoreTLSErrors;
+    if (networkProcess())
+        networkProcess()->send(Messages::NetworkProcess::SetIgnoreTLSErrors(m_ignoreTLSErrors), 0);
 }
 
 }
